sm/sm-b2b-connector/main/default/objects/CartItem/fields/B2B_Amend_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>B2B_Amend_Product_Quantity__c</fullName>
    <label>B2B Amend Product Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>