sm/sm-b2b-connector/main/default/objects/CartItem/fields/B2B_PriceBookEntry_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_PriceBookEntry_Id__c</fullName>
    <description>Id of price book entry</description>
    <label>B2B PriceBookEntry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>