sm/sm-b2b-connector/main/default/objects/CartItem/fields/B2B_SubProdTerm__c.field-meta.xml
<CustomField>
    <fullName>B2B_SubProdTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B SubProdTerm</label>
    <referenceTo>B2B_SubProdTerm__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>