sm/sm-b2b-connector/main/default/objects/CartItem/fields/B2B_Upfront__c.field-meta.xml
<CustomField>
    <fullName>B2B_Upfront__c</fullName>
    <label>B2B Upfront %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>