sm/sm-b2b-connector/main/default/objects/CartItem/fields/B2B_Upfront_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Upfront_Price__c</fullName>
    <label>B2B Upfront Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>