sm/sm-b2b-connector/main/default/objects/CartItem/fields/B2B_Uplift__c.field-meta.xml
<CustomField>
    <fullName>B2B_Uplift__c</fullName>
    <label>B2B Uplift %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>