sm/sm-b2b-connector/main/default/objects/CartItem/fields/BillingFrequency2__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency2__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Invoice Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>