sm/sm-b2b-connector/main/default/objects/CartItem/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>