sm/sm-b2b-connector/main/default/objects/CartItem/fields/Original_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Original_Quantity__c</fullName>
    <label>Original Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>