sm/sm-b2b-connector/main/default/objects/CartItem/fields/ProductSellingModel__c.field-meta.xml
<CustomField>
    <fullName>ProductSellingModel__c</fullName>
    <label>Product Selling Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>