sm/sm-b2b-connector/main/default/objects/CartItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>