sm/sm-b2b-connector/main/default/objects/CartItem/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ_Subscription__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>